bdr.BDR.scala.error
Erreur de compilation :
BDR:13: error: too many arguments for method droite: ()Unit
    droite(2);
          ^BDR:35: error: not found: value True
    fini = True;
           ^